# opengl

./: .gitignored  CMakeLists.txt  git_init.py  main.c  run.sh  tree.txt
common_files/: CMakeLists.txt
opengl_sub_dir/: CMakeLists.txt
opengl_sub_dir/include/: cube.h  display.h  global.h  idle.h  init.h  keyboard.h  motion.h  mouse.h  parameter.h  resize.h
opengl_sub_dir/src/: cube.c  display.c  global.c  idle.c  init.c  keyboard.c  motion.c  mouse.c  resize.c
